--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ highlighter: rouge
 paginate: 100 # it will paginate after this number
 language: 'en-uk'
 
-# edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /jasper2/
+# edit baseurl to simply '/' if using as your personal page (instead of a project page) -- 'OK'
+baseurl: 
 
 # Website info
 title: Ghost
